// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html change src attrib 1`] = `
"<!doctype html>
<html>
    <head>
        <meta charset=\\"UTF-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
        <meta http-equiv=\\"Cache-Control\\" content=\\"no-cache, no-store, must-revalidate\\">
        <base href=\\"/\\">
        <script src=\\"https://localhost:3000\\"></script>
    </head>
    <body>
        <main>
            <h1>hello world</h1>
            <p>My paragraph</p>
        </main>
        <a href=\\"/hfoi\\">link</a>
        <img href=\\"/image.png\\">
        <br>
        <br>
    </body>
</html>"
`;

exports[`html preserve <pre> 1`] = `
"<!doctype html>
<html>
    <body>
        <main>
            <p>This is my very first post1</p>
            <pre><code class=\\"language-ShellSession\\">$ npm install --save-dev sambal-cli</code></pre>

            <p>Sambal has <a href=\\"https://webpack.org\\">webpack</a>, <a href=\\"https://webpack.org\\">webpack</a>, <a href=\\"https://webpack.org\\">webpack</a> to do with something else</p>
            <pre><code class=\\"language-js\\">import {pipe, from, of} from &quot;rxjs&quot;;
import {mergeMap, map, groupBy, reduce, toArray} from &quot;rxjs/operators&quot;;

function aggregateBy(field) {
    return pipe(
        map((data) =&gt; data[field]),
        mergeMap(fieldValue =&gt; Array.isArray(fieldValue) ? from(fieldValue) : of(fieldValue)),
        groupBy(v =&gt; v),
        mergeMap(group$ =&gt;
            group$.pipe(reduce((acc, cur) =&gt; {
                acc.count++;
                return acc;
            }, {key: group$.key, count: 0}))    
        ),
        toArray()
    );
}</code></pre>

        </main>
    </body>
</html>"
`;

exports[`html prettify 1`] = `
"<!doctype html>
<html>
    <head>
        <meta charset=\\"UTF-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
        <meta http-equiv=\\"Cache-Control\\" content=\\"no-cache, no-store, must-revalidate\\">
        <base href=\\"/\\">
        <script src=\\"./js/index.js\\"></script>
    </head>
    <body>
        <main>
            <h1>hello world</h1>
            <p>My paragraph</p>
        </main>
        <a href=\\"/hfoi\\">link</a>
        <img href=\\"/image.png\\">
        <br>
        <br>
    </body>
</html>"
`;

exports[`html replace node 1`] = `
"<!doctype html>
<html>
    <head>
        <meta charset=\\"UTF-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
        <meta http-equiv=\\"Cache-Control\\" content=\\"no-cache, no-store, must-revalidate\\">
        <base href=\\"/\\">
        <script src=\\"./js/index.js\\"></script>
    </head>
    <body>
        <main>
            <h1>hello world</h1>
            <p>My paragraph</p>
        </main>
        <a href=\\"/hfoi\\">link</a>
        <picture>
            <source media=\\"(min-width: 480px)\\" srcset=\\"img1.jpg\\">
            <source media=\\"(min-width: 650px)\\" srcset=\\"img2.jpg\\">
        </picture>
        <br>
        <br>
    </body>
</html>"
`;
